# webplattform

./: .eslintignore  .eslintrc.json  .prettierrc.json  Dockerfile  Dockerfile.build  Dockerfile.dev  README.md  package-lock.json  package.json  pyproject.toml  webpack.config.js
dll/cms/: blocks.py  models.py  wagtail_hooks.py
dll/cms/migrations/: 0001_initial.py  0002_auto_20201123_1623.py  0003_frontpage_body.py  0004_auto_20201217_1835.py  0006_auto_20220929_1014.py  0008_auto_20221005_2217.py  0010_auto_20230508_1111.py  0011_auto_20230508_1123.py
dll/cms/tests/: test_cms_hooks.py  test_cms_pages.py
dll/communication/: admin.py  models.py  views.py
dll/communication/migrations/: 0009_auto_20230508_1123.py
dll/configuration/: settings.py  settings_dlt.py  test_settings.py  urls_dll.py  urls_dlt.py
dll/content/: admin.py  filters.py  forms.py  models.py  more_like_this.py  views.py
dll/content/migrations/: 0006_auto_20200113_1721.py  0007_auto_20200123_1002.py  0008_auto_20200206_1049.py  0010_auto_20200629_1606.py  0011_auto_20200714_1708.py  0037_auto_20230508_1123.py  0038_auto_20230525_1424.py  0039_potential_icon_white.py  0040_merge_20230705_1107.py
dll/dlt/templates/overwrites/: categories.html  content_teaser.html  my_content.html
dll/general/migrations/: 0003_auto_20230508_1123.py
dll/shared_session/: __init__.py  views.py
dll/shared_session/templatetags/: shared_session.py
dll/survey/: admin.py  forms.py
dll/survey/migrations/: 0005_auto_20210112_1302.py  0009_auto_20230508_1123.py
dll/templates/dll/: base.html  structure.html
dll/templates/overwrites/: content_teaser.html  my_content.html
dll/user/: admin.py  forms.py  middleware.py  models.py  urls.py  views.py
dll/user/migrations/: 0007_auto_20230508_1123.py  0008_dlluser_personal_data_dlluser_terms_accepted.py
dll/user/tests/: test_logout_redirect.py  test_view_login.py  test_view_signup.py
solr/: backend.py
(+162 files in other folders)
