[tool.poetry]
name = "digital.learning.lab"
version = "0.1.0"
description = "The digital.learning.lab is a online platform and understands itself as competence centre for teaching in the digital age. School teachers will find suggestions and inspiration here for further developing their lessons, taking into account the competencies for a digitalised living and working environment."
authors = ["ITBH"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "~=3.10"
Django = "<5"
psycopg2 = {version = "2.9.4", extras = ["binary"]}
django-webpack-loader = "==1.8.1"
bpython = "0.24"
uWSGI = "2.0.21"
pysolr = "==3.9.0"
django-haystack = "==3.2.1"
django-constance = {version = "==2.9.1", extras = ["database"]}
sentry-sdk = "1.16.0"
django-meta = "^2.4.2"
django-extensions = "^3.2.3"
django-filer = "^3.1.1"
django-polymorphic = "^3.1.0"
wagtail = "^6.0.1"
django-taggit = "^5.0.1"
easy-thumbnails = "^2.8.5"
django-ckeditor = "^6.7.1"
django-crispy-forms = "^2.1"
django-import-export = "^3.3.7"
djangorestframework = "^3.14.0"
django-rest-polymorphic = "^0.1.10"
xlsxwriter = "^3.2.0"
rules = "^3.3"
django-simple-history = "^3.5.0"
django-better-admin-arrayfield = "^1.4.2"
pynacl = "^1.5.0"
wagtailmenus = "^4.0"
django-select2 = "^8.1.2"
django-nested-admin = "^4.0.2"
boto3 = "^1.34.62"
django-storages = "^1.14.2"
environs = "^11.0.0"
django-upgrade = "^1.16.0"
celery = {extras = ["redis"], version = "^5.3.6"}
crispy-bootstrap5 = "^2024.2"

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.8.0"
pytest = "^8.1.1"
coverage = "^7.4.3"
django-codemod = "^2.1.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--ds=dll.configuration.test_settings"
python_files = "tests.py test_*.py *_tests.py"

[tool.black]
	extend-exclude = "migrations"
